--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,1 +1,12 @@
-<p>layout works!</p>
+<footer class="footer bg-dark text-light py">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-left">
+                <p>Copyright JobPortal</p>
+            </div>
+            <div class="col-md-6 text-right">
+                <p>@2024</p>
+            </div>
+        </div>
+    </div>
+</footer>
