--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 html,
-body{
+body,p, h1, h2, h3 ,h4{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
