Added Buttons to web pages

--- a/src/app/employer-reg/employer-reg.component.html
+++ b/src/app/employer-reg/employer-reg.component.html
@@ -52,6 +52,7 @@
                 </div>
             </div>
         </form>
+        <button type="submit" id="employer-Button" class="btn btn-info mt-3">REGISTER</button>
         <p>employer-reg works!</p>
     </div>
 
