--- a/src/app/jobseeker-registration/jobseeker-registration.component.html
+++ b/src/app/jobseeker-registration/jobseeker-registration.component.html
@@ -46,7 +46,9 @@
                     </select>
                 </div>
             </div>
+            <br/>
 
+            <button type="submit" id="jobseekerButton" class="btn btn-info">REGISTER</button>
         </form>
         
     </div>
