--- a/src/app/jobseeker-registration/jobseeker-registration.component.html
+++ b/src/app/jobseeker-registration/jobseeker-registration.component.html
@@ -6,13 +6,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <label id="SFirstName" for="SFirstName" class="col-form-label">First Name</label>
-                    <input type="text" id="SFirstName" name="SFirstName" class="form-control" />
+                    <input type="text" id="SFirstName" name="SFirstName" [(ngModel)]="Jobseeker.SFirstName" class="form-control" />
                 </div>
 
                 <br />
                 <div class="col-md-6">
                     <label id="SMiddleName" for="SMiddleName" class="col-form-label">Middle Name</label>
-                    <input type="text" id="SMiddleName" name="SMiddleName" class="form-control" />
+                    <input type="text" id="SMiddleName" name="SMiddleName"  class="form-control" />
                 </div>
 
                 <br />
