--- a/src/app/jobseeker-registration/jobseeker-registration.component.html
+++ b/src/app/jobseeker-registration/jobseeker-registration.component.html
@@ -6,41 +6,41 @@
             <div class="row">
                 <div class="col-md-6">
                     <label id="SFirstName" for="SFirstName" class="col-form-label">First Name</label>
-                    <input type="text" id="SFirstName" name="SFirstName" [(ngModel)]="Jobseeker.SFirstName" class="form-control" />
+                    <input type="text" #SFirstName="ngModel" id="SFirstName" name="SFirstName" [(ngModel)]="Jobseeker.SFirstName" minlength="3" class="form-control" required="First Name is required"/>
                 </div>
 
                 <br />
                 <div class="col-md-6">
                     <label id="SMiddleName" for="SMiddleName" class="col-form-label">Middle Name</label>
-                    <input type="text" id="SMiddleName" name="SMiddleName"  class="form-control" />
+                    <input type="text" id="SMiddleName" name="SMiddleName" [(ngModel)]="Jobseeker.SMiddleName" minlength="3" class="form-control"  />
                 </div>
 
                 <br />
                 <div class="col-md-6">
                     <label id="SLastName" for="SLastName" class="col-form-label">Last Name</label>
-                    <input type="text" id="SLastName" name="SLastName" class="form-control" />
+                    <input type="text" id="SLastName" name="SLastName" class="form-control" [(ngModel)]="Jobseeker.SLastName" required/>
                 </div>
                 <br />
                 <div class="col-md-6">
                     <label id="Email" for="Email" class="col-form-label">Email</label>
-                    <input type="text" id="Email" name="Email" class="form-control" />
+                    <input type="text" id="Email" name="Email" class="form-control" [(ngModel)]="Jobseeker.Email" required/>
                 </div>
                 <br />
                 <div class="col-md-6">
                     <label id="PhoneNumber" for="PhoneNumber" class="col-form-label">Phone Number</label>
-                    <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" />
+                    <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" [(ngModel)]="Jobseeker.PhoneNumber" required/>
                 </div>
                 <br />
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <label id="DateOfBirth" for="DateOfBirth" class="col-form-label">Date Of Birth:</label>
-                    <input type="date" id="DateOfBirth" name="DateOfBirth" class="form-control" />
+                    <input type="date" id="DateOfBirth" name="DateOfBirth" class="form-control"  [(ngModel)]="Jobseeker.DateOfBirth" required/>
                 </div>
                 <br />
                 <div class="col-md-12">
                     <label id="WorkStatus" for="WorkStatus" class="col-form-label">WorkStatus</label>
-                    <select class="form-control">
+                    <select [(ngModel)]="Jobseeker.WorkStatus" class="form-control" name="WorkStatus" required>
                         <option value="">Select your Options</option>
                         <option *ngFor="let status of workStatus" [value]="status">{{status}}</option>
                     </select>
