Added Jobseekers validation

--- a/src/app/jobseeker-registration/jobseeker-registration.component.html
+++ b/src/app/jobseeker-registration/jobseeker-registration.component.html
@@ -6,51 +6,122 @@
             <div class="row">
                 <div class="col-md-6">
                     <label id="SFirstName" for="SFirstName" class="col-form-label">First Name</label>
-                    <input type="text" #SFirstName="ngModel" id="SFirstName" name="SFirstName" [(ngModel)]="Jobseeker.SFirstName" minlength="3" class="form-control" required="First Name is required"/>
+                    <input type="text" #SFirstName="ngModel" id="SFirstName" name="SFirstName"
+                        [(ngModel)]="Jobseeker.SFirstName" minlength="3" maxlength="10" class="form-control"
+                        pattern="{{ regex['Nameregex'] }}" required />
+                    <div class="text-danger" *ngIf="
+              (SFirstName.invalid &&
+                (SFirstName.touched || SFirstName.dirty)) ||
+              isFormSummited
+            ">
+                        <span *ngIf="SFirstName.errors?.['required'] ">First Name is Required</span>
+                        <span  *ngIf="SFirstName.errors?.['minlength']">Minimum 3 letter is Required</span>
+                        <br />
+                        <span *ngIf="SFirstName.errors?.['maxlength'] ">Maximum 10 characters</span>
+                        <span *ngIf="SFirstName.errors?.['pattern'] ">Only Alphabets allowed And First letter should be
+                            capital</span>
+                    </div>
                 </div>
 
                 <br />
                 <div class="col-md-6">
                     <label id="SMiddleName" for="SMiddleName" class="col-form-label">Middle Name</label>
-                    <input type="text" id="SMiddleName" name="SMiddleName" [(ngModel)]="Jobseeker.SMiddleName" minlength="3" class="form-control"  />
+                    <input type="text" #SMiddleName="ngModel" id="SMiddleName" name="SMiddleName"
+                        [(ngModel)]="Jobseeker.SMiddleName" minlength="3" maxlength="10" class="form-control"
+                        pattern="{{ regex['Nameregex'] }}" />
+                    <div class="text-danger" *ngIf="
+              SMiddleName.invalid && (SMiddleName.touched || SMiddleName.dirty)
+            ">
+                        <span *ngIf="SMiddleName.errors?.['minlength'] ">Minimum 3 letter is Required</span>
+                        <br/>
+                        <span *ngIf="SMiddleName.errors?.['maxlength'] ">Maximum 10 characters</span>
+                        <span *ngIf="SMiddleName.errors?.['pattern'] ">Only Alphabets allowed And First letter should be
+                            capital</span>
+                    </div>
                 </div>
 
                 <br />
                 <div class="col-md-6">
                     <label id="SLastName" for="SLastName" class="col-form-label">Last Name</label>
-                    <input type="text" id="SLastName" name="SLastName" class="form-control" [(ngModel)]="Jobseeker.SLastName" required/>
+                    <input type="text" id="SLastName" #SLastName="ngModel" name="SLastName" class="form-control"
+                        [(ngModel)]="Jobseeker.SLastName" minlength="3" maxlength="10"
+                        pattern="{{ regex['Nameregex'] }}" required />
+                    <div class="text-danger" *ngIf="SLastName.invalid && (SLastName.touched || SLastName.dirty)||
+                    isFormSummited">
+                        <span *ngIf="SLastName.errors?.['required'] ">Last Name is Required</span>
+                        <span *ngIf="SLastName.errors?.['minlength']">Minimum 3 letter is Required</span>
+                        <br/>
+                        <span *ngIf="SLastName.errors?.['maxlength']">Maximum 10 characters</span>
+                        <span *ngIf="SLastName.errors?.['pattern']">Only Alphabets allowed And First letter should be
+                            capital</span>
+                    </div>
                 </div>
                 <br />
                 <div class="col-md-6">
                     <label id="Email" for="Email" class="col-form-label">Email</label>
-                    <input type="text" id="Email" name="Email" class="form-control" [(ngModel)]="Jobseeker.Email" required/>
+                    <input type="text" id="Email" #Email="ngModel" name="Email" class="form-control"
+                        [(ngModel)]="Jobseeker.Email" minlength="3" maxlength="25" pattern="{{ regex['Email'] }}"
+                        required />
+                    <div class="text-danger" *ngIf="Email.invalid && Email.touched && Email.dirty || isFormSummited">
+                        <span *ngIf="Email.errors?.['required'] ">Email is Required</span>
+                        <span *ngIf="Email.errors?.['minlength'] ">Minimum 3 letter is Required</span>
+                        <br/>
+                        <span *ngIf="Email.errors?.['maxlength'] ">Maximum 25 characters</span>
+                        <span class="text-danger" *ngIf="Email.errors?.['pattern'] ">Enter a valid Email</span>
+                    </div>
                 </div>
                 <br />
                 <div class="col-md-6">
                     <label id="PhoneNumber" for="PhoneNumber" class="col-form-label">Phone Number</label>
-                    <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" [(ngModel)]="Jobseeker.PhoneNumber" required/>
+                    <input type="text" id="PhoneNumber" #PhoneNumber="ngModel" name="PhoneNumber" class="form-control"
+                        [(ngModel)]="Jobseeker.PhoneNumber" minlength="10" maxlength="10"
+                        pattern="{{ regex['PhoneNumber'] }}" required />
+                    <div class="text-danger" *ngIf="
+              PhoneNumber.invalid && (PhoneNumber.touched || PhoneNumber.dirty) ||isFormSummited
+            ">
+                        <span *ngIf="PhoneNumber.errors?.['required'] ">Phone Number is Required</span>
+                        <span *ngIf="PhoneNumber.errors?.['minlength'] ">Minimum 10 digits is Required</span>
+                        <br/>
+                        <span *ngIf="PhoneNumber.errors?.['maxlength'] ">Maximum 10 digits</span>
+                        <span *ngIf="PhoneNumber.errors?.['pattern'] ">Enter a valid PhoneNumber</span>
+                    </div>
                 </div>
                 <br />
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <label id="DateOfBirth" for="DateOfBirth" class="col-form-label">Date Of Birth:</label>
-                    <input type="date" id="DateOfBirth" name="DateOfBirth" class="form-control"  [(ngModel)]="Jobseeker.DateOfBirth" required/>
+                    <input type="date" id="DateOfBirth" #DateOfBirth="ngModel" name="DateOfBirth" class="form-control"
+                        [(ngModel)]="Jobseeker.DateOfBirth" [min]="minDate" [max]="maxDate" required />
+                    <div class="text-danger" *ngIf="
+              DateOfBirth.invalid && (DateOfBirth.touched || DateOfBirth.dirty) || isFormSummited
+            ">
+                        <span *ngIf="DateOfBirth.errors?.['required'] ">Date Of Birth is Required</span>
+                    </div>
                 </div>
                 <br />
                 <div class="col-md-12">
                     <label id="WorkStatus" for="WorkStatus" class="col-form-label">WorkStatus</label>
-                    <select [(ngModel)]="Jobseeker.WorkStatus" class="form-control" name="WorkStatus" required>
+                    <select [(ngModel)]="Jobseeker.WorkStatus" #WorkStatus="ngModel" class="form-control"
+                        name="WorkStatus" required>
                         <option value="">Select your Options</option>
-                        <option *ngFor="let status of workStatus" [value]="status">{{status}}</option>
+                        <option *ngFor="let status of workStatus" [value]="status">
+                            {{ status }}
+                        </option>
                     </select>
+                    <div class="text-danger" *ngIf="
+              WorkStatus.invalid && (WorkStatus.touched || WorkStatus.dirty) || isFormSummited
+            ">
+                        <span class="text-danger" *ngIf="WorkStatus.errors?.['required'] ">Work Status is
+                            Required</span>
+                    </div>
                 </div>
             </div>
-            <br/>
+            <br />
 
-            <button type="submit" id="jobseekerButton" class="btn btn-info">REGISTER</button>
+            <button type="button" (click)="onSubmit()" id="jobseekerButton" class="btn btn-info">
+                REGISTER
+            </button>
         </form>
-        
     </div>
-
 </div>
